# CudaDynamicParallelismPerfEval

./: README.md
N-body-simulation/: README.md
N-body-simulation/src/BH/: CMakeLists.txt  main.cu  test BarnesHut.txt
N-body-simulation/src/DS/: CMakeLists.txt  directSum_kernel.cu  test directsum.txt
cdpQuadTree/: README.md
cdpQuadTree/src/cdpQuadtree/: cdpQuadtree.cu  test cdpQuadtree.txt
cdpQuadTree/src/quadtree/: quadtree.cu  test quadtree.txt
mandelbrot-dyn/mandelbrot/: makefile  mandelbrot.cu  test mandelbrot.txt
mandelbrot-dyn/mandelbrot-dyn/: makefile  mandelbrot-dyn.cu  test mandelbrot-dyn.txt
